maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:24: error: illegal start of simple expression
	if (estFaceMur) {
        ^